# OS

colloquim2_os/list_todo/: pom.xml  test.http  todo.db
colloquim2_os/list_todo/src/main/java/org/example/list_todo/: ListTodoApplication.java
colloquim2_os/list_todo/src/main/java/org/example/list_todo/controller/: TaskController.java
colloquim2_os/list_todo/src/main/java/org/example/list_todo/model/: Task.java
colloquim2_os/list_todo/src/main/java/org/example/list_todo/repository/: TaskRepository.java
colloquim2_os/list_todo/src/main/resources/: application.properties
colloquim2_os/list_todo/src/test/java/org/example/list_todo/: ListTodoApplicationTests.java
colloquim_os/: colloquim.cpp
colloquim_os/task1/: fibonacci.h  task1.cpp  test.cpp
colloquim_os/task2/: palindrom.h  task2.cpp  test.cpp
colloquim_os/task3/: list.h  task3.cpp  test.cpp
lab1_os/: CMakeLists.txt  creator.cpp  creator_func.cpp  creator_func.h  employee.h  main.cpp  reporter.cpp  reporter_func.cpp  reporter_func.h
lab1_os/tests/: test_creator.cpp  test_reporter.cpp
lab2_os1/: CMakeLists.txt
lab2_os1/src/: core.cpp  core.h  lab2_os1.cpp  lab2_os1.h  lab2_os_th.cpp  utils.h
lab2_os1/src/wrappers/: AverageWrapper.cpp  AverageWrapper.h  AverageWrapper_th.cpp  AverageWrapper_th.h  MinMaxWrapper.cpp  MinMaxWrapper.h  MinMaxWrapper_th.cpp  MinMaxWrapper_th.h
lab2_os1/tests/: tests_core.cpp
lab3_os/: CMakeLists.txt
lab3_os/lab3_os/: CMakeLists.txt
lab3_os/lab3_os/src/: lab3_os.cpp  lab3_os.h  marker_thread.h  sync.cpp  sync.h
lab3_os/src/: lab3_os.cpp  marker_thread.cpp  sync.h  tests_lab3.cpp
lab_os4/: CMakeLists.txt  lab_os4.cpp  lab_os4.h  sender.cpp  sync_manager.cpp  sync_manager.h  tests.cpp
lab_os5/: CMakeLists.txt
lab_os5/lab_os5/: CMakeLists.txt  client.cpp  lab_os5.h  server.cpp
